hphp/test/slow/finally/new_try_catch_016.php.expectf
1
2
3
4
5
6
7
8
9
10
11
12
13
HipHop Fatal error: Uncaught exception 'Exception' with message 'ble!' in %s/test/slow/finally/new_try_catch_016.php:13
Stack trace:
#0 %s/test/slow/finally/new_try_catch_016.php(%s): blah()
#1 {main}

Next exception 'A' with message 'bla!' in %s/test/slow/finally/new_try_catch_016.php:25
Stack trace:
#0 %s/test/slow/finally/new_try_catch_016.php(%s): blah()
#1 {main}

Next exception 'C' with message 'ble!' in %s/test/slow/finally/new_try_catch_016.php:29
Stack trace:
#0 %s/test/slow/finally/new_try_catch_016.php(58): blah()
#1 {main}

Next exception 'B' with message '14' in %s/test/slow/finally/new_try_catch_016.php:41
Stack trace:
#0 %s/test/slow/finally/new_try_catch_016.php(58): blah()
#1 {main}
